--- a/src/rpocore/static/css/campaign.css
+++ b/src/rpocore/static/css/campaign.css
@@ -1,3 +1,11 @@
 .justify {
     text-align: justify;
 }
+.supporterLabel {
+    width: 80px;
+    min-width: 80px;
+}
+.supporterPanel {
+    max-width: 400px;
+    display: inline-block;
+}
