--- a/src/rpocore/templates/pages/supporterpage.html
+++ b/src/rpocore/templates/pages/supporterpage.html
@@ -47,6 +47,40 @@
     <h4>{% trans 'Supporter statistics' %}</h4>
     {# expand with support statistics, variables will come from page processor #}
 
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <span class="statisticsLabel pull-left">{% trans 'Total amount of supporters' %}:</span><span class="statisticsValue">{{ all_count }}</span><br />
+            <span class="statisticsLabel pull-left">{% trans 'Amount of supporters from University of Hamburg' %}:</span><span class="statisticsValue">{{ uhh_count }}</span><br />
+            <span class="statisticsLabel pull-left">{% trans 'Amount of supporters from other universities' %}:</span><span class="statisticsValue">{{ other_count }}</span><br />
+            {% for group_data in data %}
+                <span class="statisticsLabel pull-left">{% trans 'Total amount of supporters of group' %} {{ group_data.0 }}:</span><span class="statisticsValue">{{ group_data.1 }}</span><br />
+            {% endfor %}
+        </div>
+    </div>
+
+    <h5>{% trans 'Supporters from University of Hamburg' %}</h5>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="row">
+                <span class="col-xs-3 col-xs-offset-9">{% trans 'Current stretch goal' %}</span>
+            </div>
+            {% for group_data in data %}
+                <div class="row">
+                    <span class="col-xs-2">{{ group_data.0 }}</span>
+                    <div class="col-xs-7 progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="{{ group_data.2 }}" aria-valuemin="0"
+                             aria-valuemax="{{ group_data.4 }}" style="min-width: 2em; width: {{ group_data.5 }};">
+                            {{ group_data.5 }}
+                        </div>
+                    </div>
+                    <span class="col-xs-3">
+                        {{ group_data.4 }}
+                    </span>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
     <h4>{% trans 'Support statements' %}</h4>
     {# expand with support statements, variables will come from page processor #}
     {% for supporter in supporters %}
