[Core] Improved markup of support page type
Signed-off-by: Jim Martens <github@2martens.de>

--- a/src/rpocore/templates/pages/supporterpage.html
+++ b/src/rpocore/templates/pages/supporterpage.html
@@ -62,7 +62,8 @@
     <div class="panel panel-default">
         <div class="panel-body">
             <div class="row">
-                <span class="col-xs-3 col-xs-offset-9">{% trans 'Current stretch goal' %}</span>
+                <strong class="col-xs-2">{% trans 'Support group' %}</strong>
+                <strong class="col-xs-3 col-xs-offset-7">{% trans 'Current stretch goal' %}</strong>
             </div>
             {% for group_data in data %}
                 <div class="row">
