--- a/src/rpocore/templates/pages/supporterpage.html
+++ b/src/rpocore/templates/pages/supporterpage.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block main %}
-    <h4>{% trans 'Notable supporters' %}</h4>
+    <h4 id="notable_supporters">{% trans 'Notable supporters' %}</h4>
     {% for supporter in page.supporterpage.notable_supporters.all %}
         <div class="panel panel-default supporterPanel">
             <div class="panel-body">
@@ -44,7 +44,7 @@
         </div>
     {% endfor %}
 
-    <h4>{% trans 'Supporter statistics' %}</h4>
+    <h4 id="statistics">{% trans 'Supporter statistics' %}</h4>
     {# expand with support statistics, variables will come from page processor #}
 
     <div class="panel panel-default">
@@ -82,7 +82,7 @@
         </div>
     </div>
 
-    <h4>{% trans 'Support statements' %}</h4>
+    <h4 id="statements">{% trans 'Support statements' %}</h4>
     {# expand with support statements, variables will come from page processor #}
     {% for supporter in supporters %}
         <div class="supportStatement">
