[Core] Added statement page template
Signed-off-by: Jim Martens <github@2martens.de>

--- a/src/rpocore/templates/base.html
+++ b/src/rpocore/templates/base.html
@@ -33,6 +33,7 @@
 {% endcompress %}
 <!--{% static "mezzanine/js/"|add:settings.JQUERY_FILENAME %}-->
 <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+<script src="https://use.fontawesome.com/ef07f7fced.js"></script>
 {% compress js %}
 <script src="{% static "js/bootstrap.js" %}"></script>
 <script src="{% static "js/bootstrap-extras.js" %}"></script>
