--- a/src/rpocore/templates/pages/statementpage.html
+++ b/src/rpocore/templates/pages/statementpage.html
@@ -66,7 +66,7 @@
                 and want to submit your statement, go ahead.
                 {% endblocktrans %}
             </p>
-            <a class="btn btn-primary" href="#">{% trans 'Submit statement' %}</a>
+            <a class="btn btn-primary" href="{% url 'page' slug='stellungnahme-einreichen' %}">{% trans 'Submit statement' %}</a>
         </div>
     </div>
 
