--- a/src/rpocore/templates/pages/index.html
+++ b/src/rpocore/templates/pages/index.html
@@ -1,50 +1,85 @@
 {% extends "base.html" %}
-{% load i18n %}
+{% load mezzanine_tags keyword_tags i18n %}
 
-{% block breadcrumb_menu %}
-<li class="active">{% trans "Home" %}</li>
-{% endblock %}
+{% block meta_title %}{{ page.meta_title }}{% endblock %}
+
+{% block meta_keywords %}{% metablock %}
+{% keywords_for page as keywords %}
+{% for keyword in keywords %}
+    {% if not forloop.first %}, {% endif %}
+    {{ keyword }}
+{% endfor %}
+{% endmetablock %}{% endblock %}
+
+{% block meta_description %}{% metablock %}
+{{ page.description }}
+{% endmetablock %}{% endblock %}
 
 {% block main %}
-{% blocktrans %}
-    <h2>Congratulations!</h2>
-    <p>
-        Welcome to your new Mezzanine powered website.
-        Here are some quick links to get you started:
-    </p>
-    <ul>
-        <li><a href="/admin/">Log in to the admin interface</a></li>
-        <li><a href="http://mezzanine.jupo.org/docs/content-architecture.html">Creating custom page types</a></li>
-        <li><a href="http://mezzanine.jupo.org/docs/frequently-asked-questions.html#templates">Modifying HTML templates</a></li>
-        <li><a href="http://mezzanine.jupo.org/docs/frequently-asked-questions.html#why-isn-t-the-homepage-a-page-object-i-can-edit-via-the-admin">Changing this homepage</a></li>
-        <li><a href="http://mezzanine.jupo.org/docs/frequently-asked-questions.html">Other frequently asked questions</a></li>
-        <li><a href="http://mezzanine.jupo.org/docs/configuration.html#default-settings">Full list of settings</a></li>
-        <li><a href="http://mezzanine.jupo.org/docs/deployment.html">Deploying to a production server</a></li>
-    </ul>
 
-    <div class="row">
-        <div class="col-sm-9"></div>
-        <div class="col-sm-3">
-            <strong>next goal:</strong>
+    {# carousel #}
+    <div id="carousel-showcase" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            {% for item in page.homepagepage.carousel_items.all %}
+                <li data-target="#carousel-showcase" data-slide-to="{{ forloop.counter0 }}"{% if forloop.first %} class="active"{% endif %}></li>
+            {% endfor %}
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            {% for item in page.homepagepage.carousel_items.all %}
+                <div class="item{% if forloop.first %} active{% endif %}">
+                    <a href="/{{ item.url }}/">
+                        {% ifnotequal item.background_image '' %}
+                            <img src="{{ MEDIA_URL }}{{ item.background_image }}" alt="">
+                        {% endifnotequal %}
+                        <div class="carousel-caption">
+                            <h3>{{ item.caption }}</h3>
+                        </div>
+                        {% ifequal item.background_image '' %}
+                            {{ item.background_html|richtext_filters|safe }}
+                        {% endifequal %}
+                    </a>
+                </div>
+            {% endfor %}
         </div>
+
+        <!-- Controls -->
+        <!--
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+        -->
     </div>
-    <div class="row">
-        <div class="col-sm-3"><span class="pull-right">Studierende</span></div>
-        <div class="progress col-sm-6 ">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 80%;">
-                80%
+
+    {# progress #}
+    {% if page.homepagepage.process %}
+        <div class="progress">
+            <div class="progress-bar progress-bar-warning"
+                style="width: {{ widthRemainingProgress }};"
+                role="progressbar"
+                aria-valuemin="{{ amountSuccessfulPhases }}"
+                aria-valuenow="{{ activePhaseNumber }}"
+                aria-valuemax="{{ amountOfPhases }}"
+            >
+                <div>
+                    <div class="bg-success" style="width: {{ widthSuccessfulProgress }}; height: 10px; border-radius: 4px 0 0 4px;">
+                        <div class="phase process-start bg-{% if process.result == 'failure' %}danger{% else %}success{% endif %}"></div>
+                        {% for phaseObj in phases %}
+                            <div class="phase{% if phaseObj.phase.in_past %} bg-success{% elif phaseObj.phase.active %} bg-warning{% endif %}"
+                                style="{% if forloop.last %}right{% else %}left{% endif %}: {{ phaseObj.percentage }}"
+                            ></div>
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
         </div>
-        <span class="col-sm-3">100</span>
-    </div>
-    <div class="row">
-        <div class="col-sm-3"><span class="pull-right">Professor*innen</span></div>
-        <div class="progress col-sm-6 ">
-            <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="10" style="min-width: 2em; width: 50%;">
-                50%
-            </div>
-        </div>
-        <span class="col-sm-3">10</span>
-    </div>
-{% endblocktrans %}
+    {% endif %}
+
 {% endblock %}
