[Core] Added remaining fields to index template
Signed-off-by: Jim Martens <github@2martens.de>

--- a/src/rpocore/templates/pages/index.html
+++ b/src/rpocore/templates/pages/index.html
@@ -82,4 +82,19 @@
         </div>
     {% endif %}
 
+    {# campaign positions #}
+    <div>
+        {{ page.homepagepage.campaign_positions|richtext_filters|safe }}
+    </div>
+
+    {# supporter statistics #}
+    <div>
+        {{ page.homepagepage.supporter_statistics|richtext_filters|safe }}
+    </div>
+
+    {# get active #}
+    <div>
+        {{ page.homepagepage.get_active|richtext_filters|safe }}
+    </div>
+
 {% endblock %}
