[Core] Added CSS to support carousel items
Signed-off-by: Jim Martens <github@2martens.de>

--- a/src/rpocore/static/css/campaign.css
+++ b/src/rpocore/static/css/campaign.css
@@ -49,3 +49,11 @@
 .inline-stacked ._order {
     display: block;
 }
+
+.carousel-inner .item {
+    height: 360px;
+}
+
+.carousel-inner .item .content {
+    height: 100%;
+}
