[Core] Fixed wrong appearance of progress bar
Signed-off-by: Jim Martens <github@2martens.de>

--- a/src/rpocore/static/css/campaign.css
+++ b/src/rpocore/static/css/campaign.css
@@ -34,8 +34,15 @@
     display: inline-block;
     position: absolute;
 }
+.phase-intermediate {
+    margin-left: -10px;
+}
+
 .process-start {
     left: 1em;
+}
+.process-end {
+    background-color: #ecf0f1;
 }
 
 .progress {
