[Core] Fixed size of carousel images
With this change FullHD images are now shown almost correctly
(the available width is a little bit smaller than the image's width).

Signed-off-by: Jim Martens <github@2martens.de>

--- a/src/rpocore/static/css/campaign.css
+++ b/src/rpocore/static/css/campaign.css
@@ -61,13 +61,14 @@
 }
 
 .carousel-inner .item {
-    height: 360px;
+    height: 480px;
 }
 
 .carousel-inner .item .content {
     height: 100%;
 }
 
-.middle img {
+.carousel-inner > .item > a > img {
     max-width: inherit;
+    height: 480px
 }
