[Core] Centered the footer menu
The footer menu previously used some custom class which made it look bad. With the bootstrap CSS class
and proper HTML5 markup combined with some CSS rules the menu items are now centered and spaced properly

Signed-off-by: Jim Martens <github@2martens.de>

--- a/src/rpocore/static/css/campaign.css
+++ b/src/rpocore/static/css/campaign.css
@@ -76,3 +76,11 @@
 .carousel-inner > .item > a > .carousel-caption > h3 {
     background: linear-gradient(to right, transparent, rgba(0,0,0,0.5), transparent)
 }
+
+footer .nav > li {
+    display: inline-block;
+}
+
+footer .nav {
+    text-align: center;
+}
