[Core] Added examples for possible organizations
Signed-off-by: Jim Martens <github@2martens.de>

--- a/src/rpocore/templates/pages/statementpage.html
+++ b/src/rpocore/templates/pages/statementpage.html
@@ -65,7 +65,7 @@
             <p>
                 {% blocktrans %}
                 Please understand that no statements from individuals can be shown here. If you are an organization
-                and want to submit your statement, go ahead.
+                (e.g. AStA, FSR) and want to submit your statement, go ahead.
                 {% endblocktrans %}
             </p>
             <a class="btn btn-primary" href="{% url 'page' slug='stellungnahme-einreichen' %}">{% trans 'Submit statement' %}</a>
