[Core] Changed notable supporter to first signatory
Signed-off-by: Jim Martens <github@2martens.de>

--- a/src/rpocore/templates/pages/supporterpage.html
+++ b/src/rpocore/templates/pages/supporterpage.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block main %}
-    <h4 id="notable_supporters">{% trans 'Notable supporters' %}</h4>
+    <h4 id="notable_supporters">{% trans 'First signatories' %}</h4>
     {% for supporter in page.supporterpage.notable_supporters.all %}
         <div class="panel panel-default supporterPanel">
             <div class="panel-body">
