--- a/src/rpocore/templates/base.html
+++ b/src/rpocore/templates/base.html
@@ -18,6 +18,7 @@
 {% compress css %}
     <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
     <link rel="stylesheet" href="{% static "css/mezzanine.css" %}">
+    <link rel="stylesheet" href="{% static "css/jquery-ui.min.css" %}">
     <link rel="stylesheet" href="{% static "css/bootstrap-flatly.css" %}">
     <link rel="stylesheet" href="{% static "css/campaign.css" %}">
 {% if LANGUAGE_BIDI %}
@@ -37,6 +38,7 @@
 {% compress js %}
 <script src="{% static "js/bootstrap.js" %}"></script>
 <script src="{% static "js/bootstrap-extras.js" %}"></script>
+<script src="{% static "js/jquery-ui.min.js" %}"></script>
 {% block extra_js %}{% endblock %}
 {% endcompress %}
 
