--- a/src/rpocore/templates/includes/supporting_orgs.html
+++ b/src/rpocore/templates/includes/supporting_orgs.html
@@ -4,12 +4,16 @@
 {% support_orgs as orgs %}
 
 {% if orgs %}
-<h3>{% trans 'Supporting organizations' %}</h3>
-<ul class="list-unstyled">
-    {% for org in orgs %}
-    <li>
-        <a href="{{ org.url }}"><img src="{{ MEDIA_URL }}{{ org.logo }}" alt="{{ org.name }}"></a>
-    </li>
-    {% endfor %}
-</ul>
+<div class="panel panel-default">
+    <div class="panel-body">
+        <h3>{% trans 'Supporting organizations' %}</h3>
+        <ul class="list-unstyled">
+            {% for org in orgs %}
+            <li>
+                <a href="{{ org.url }}"><img src="{{ MEDIA_URL }}{{ org.logo }}" alt="{{ org.name }}"></a>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
 {% endif %}
