[Core] Added events to website
Signed-off-by: Jim Martens <github@2martens.de>

--- a/src/rpocore/templates/base.html
+++ b/src/rpocore/templates/base.html
@@ -118,6 +118,7 @@
                 {% include "twitter/tweets.html" %}
                 {% endifinstalled %}-->
                 {% include "includes/supporting_orgs.html" %}
+                {% include "includes/events.html" %}
                 {% endblock %}
                 <!--</div>
             </div>-->
